UI: Add sticky save button to scrollable settings

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ __pycache__/
 Vorversionen/
 
 Ambient scribe/Komplettscript/Vorversionen/
+
+ambient_scribe/komplettscript/Komplettscript_Full_Backup.py
